<?xml version="1.0" encoding="utf-8"?>
<!--目前弃用-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:text="@string/dialog_text_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font_mid"
        android:layout_weight="1"
        android:layout_gravity="center"/>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">

        <Button
            android:id="@+id/study_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dialog_button1"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
        <Button
            android:id="@+id/life_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dialog_button2"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

</LinearLayout>